# ferrisrbe

./: .bazelignore  .bazelrc  .clippy.toml  .gitignore  .gitpod.yml  AGENTS.md  BUILD.bazel  Cargo.toml  Dockerfile  Dockerfile.server  Dockerfile.ubuntu-build  Dockerfile.worker  MODULE.bazel  README.md  build.rs  deny.toml  docker-compose.dev.yml  docker-compose.yml  kind-config.yaml  podman-compose.yml  railway.json  railway.toml
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  docs.yml  pull-request.yml  release.yml  security.yml
benchmark/: BUILD.bazel  CI_CD.md  README.md  docker-compose.benchmark.yml  docker-compose.buildbarn.yml  docker-compose.buildbuddy.yml  docker-compose.buildfarm.yml  docker-compose.ferrisrbe.yml  docker-compose.monitoring.yml  docker-compose.nativelink.yml  orchestrator.py  requirements.txt
benchmark/config/: buildbarn-frontend.json  buildbarn-runner.json  buildbarn-scheduler.json  buildbarn-storage.json  buildbarn-worker.json  buildbuddy-config.yaml  buildbuddy-executor-config.yaml  buildfarm-server.config  buildfarm-worker.config  nativelink-server.json5  nativelink-worker.json5  prometheus.yml
benchmark/config/grafana/dashboards/: rbe-benchmark.json
benchmark/config/grafana/datasources/: datasources.yml
benchmark/proto/: BUILD.bazel  generate_protos.py
benchmark/proto_gen/google/api/: annotations_pb2_grpc.py  client_pb2_grpc.py  field_behavior_pb2_grpc.py  http_pb2_grpc.py  launch_stage_pb2_grpc.py
benchmark/proto_gen/google/bytestream/: bytestream_pb2.py  bytestream_pb2_grpc.py
benchmark/proto_gen/google/longrunning/: operations_pb2.py  operations_pb2_grpc.py
benchmark/proto_gen/google/rpc/: status_pb2_grpc.py
benchmark/results/: BENCHMARK_REPORT_20260226_221106.md  BENCHMARK_REPORT_20260301_204418.md  BENCHMARK_REPORT_20260301_204540.md  BENCHMARK_RESULTS.md  LATEST_REPORT.md  benchmark_20260226_221106.csv  cache_20260307_140658.json  cache_full.json  cache_test.json  cas_20260307_140637.json  cas_full.json  cas_test.json  execution_20260307_140520.json  execution_full.json  execution_mini.json  execution_test.json  scheduler_full.json  stampede_20260307_141427.json  stampede_full.json  stampede_test.json
benchmark/scripts/: BUILD.bazel  action-cache-test.py  bazel-utils.sh  benchmark-ci.sh  benchmark-local.sh  benchmark.sh  benchmark_lib.py  build-with-bazel.sh  cache-stampede-test.py  cas-load-test.py  check-regression.py  cold-start-test.sh  compare-branches.sh  connection-churn-test.py  execution-load-test.py  generate-report.sh  memory-footprint.sh  metrics-collector.py  noisy-neighbor-test.py  o1-streaming-test.py  run-benchmark.sh  simple-benchmark.sh  verify-setup.sh
charts/: ferrisrbe-0.1.0.tgz  index.yaml  install.sh  release.sh
charts/ferrisrbe/: Chart.yaml  README.md  values.yaml
charts/ferrisrbe/templates/: NOTES.txt  _helpers.tpl  bazel-remote-deployment.yaml  bazel-remote-service.yaml  bes-deployment.yaml  bes-service.yaml  cache-deployment.yaml  cache-service.yaml  configmap.yaml  redis-deployment.yaml  server-deployment.yaml  server-service.yaml  serviceaccount.yaml  worker-deployment.yaml  worker-hpa.yaml
docs/: README.md  api.md  architecture.md  bazel-integration.md  configuration.md  deployment.md  monitoring.md  project-structure.md  troubleshooting.md
examples/: README.md
examples/bazel-7.4/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/bazel-8.x/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/bazel-9.x/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/enterprise/: .bazelrc  .bazelrc.local  BUILD.bazel  BUILD.simple  MODULE.bazel  tree_generator.bzl
examples/enterprise/toolchains/: BUILD.bazel  cc_toolchain_config.bzl  gcc_toolchain.bzl
k8s/: bazel-remote-nodeport.yaml  bazel-remote-service-patch.yaml  bazel-remote.yaml  bes-deployment.yaml  cas-pvc.yaml  configmap.yaml  docker-desktop-deployment.yaml  namespace.yaml  rbe-cache-nodeport.yaml  rbe-cache-service-patch.yaml  rbe-cache.yaml  redis.yaml  server-deployment.yaml  storageclass-gp3.yaml  worker-deployment.yaml
oci/: BUILD.bazel
proto/: BUILD.bazel  worker.proto
proto/google/api/: annotations.proto  client.proto  field_behavior.proto  http.proto  launch_stage.proto
proto/google/bytestream/: bytestream.proto
proto/google/longrunning/: operations.proto
proto/google/protobuf/: any.proto  descriptor.proto  duration.proto  empty.proto  timestamp.proto  wrappers.proto
proto/google/rpc/: status.proto
proto/tools/protos/: spawn.proto
scripts/: run-local.sh
src/: lib.rs  main.rs  types.rs
src/bes/: api.rs  config.rs  mod.rs  models.rs  service.rs  storage.rs
src/cache/: action_cache.rs  disk_action_cache.rs  mod.rs
src/cas/: error.rs  mod.rs
src/cas/backends/: disk.rs  grpc.rs  http_proxy.rs  mod.rs
src/execution/: engine.rs  mod.rs  output_handler.rs  results.rs  scheduler.rs  state_machine.rs
src/server/: action_cache_service.rs  byte_stream.rs  capabilities_service.rs  cas_service.rs  execution_service.rs  middleware.rs  mod.rs  worker_service.rs
src/version/: README.md  detector.rs  mod.rs  registry.rs  traits.rs
src/version/handlers/: mod.rs  v7_handler.rs  v8_handler.rs  v9_handler.rs
src/worker/: k8s.rs  materializer.rs  mod.rs  multiplex.rs  output_uploader.rs  pool.rs
test_remote/: BUILD.bazel
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/api/: bes.ts
ui/src/components/: Layout.tsx  StatusBadge.tsx
ui/src/pages/: BuildDetail.tsx  Builds.tsx  Dashboard.tsx  Misses.tsx  TargetDetail.tsx  Targets.tsx  TestDetail.tsx  Tests.tsx
ui/src/types/: index.ts
