"""Build file raíz para FerrisRBE.

Este archivo define los binarios de Rust para el servidor y worker RBE.

IMPORTANTE: Sobre el uso de build.rs con tonic-build en Bazel
-------------------------------------------------------------
Este proyecto demuestra cómo usar build.rs con tonic-build dentro del sandbox
de Bazel:

1. Los archivos proto están en el filegroup //proto:all_protos
2. El cargo_build_script usa esos archivos como data
3. El build.rs busca los archivos en el execroot (subiendo desde runfiles)

Esto permite bazelizar proyectos Rust existentes sin modificar su estructura
interna ni migrar completamente a rules_proto.
"""

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")

# ============================================================================
# Script de compilación para generar código protobuf con tonic-build
# ============================================================================

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    build_script_env = {
        "PROTOC": "$(execpath @com_google_protobuf//:protoc)",
    },
    # Usar el filegroup de proto para tener todos los archivos disponibles
    data = [
        "//proto:all_protos",
        "@com_google_protobuf//:well_known_type_protos",
    ],
    tools = [
        "@com_google_protobuf//:protoc",
    ],
    deps = [
        "@crates//:tonic-build",
    ],
)

# ============================================================================
# Biblioteca compartida (lib.rs)
# ============================================================================

rust_library(
    name = "rbe_lib",
    crate_name = "rbe_server",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs", "src/bin/**/*.rs"],
    ),
    compile_data = [":build_script"],
    crate_root = "src/lib.rs",
    edition = "2021",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    deps = [
        ":build_script",
        "@crates//:ahash",
        "@crates//:anyhow",
        "@crates//:async-stream",
        "@crates//:bytes",
        "@crates//:chrono",
        "@crates//:crossbeam",
        "@crates//:dashmap",
        "@crates//:fastrand",
        "@crates//:futures",
        "@crates//:hex",
        "@crates//:once_cell",
        "@crates//:parking_lot",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:serde",
        "@crates//:serde_bytes",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tokio-util",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:uuid",
    ],
    visibility = ["//visibility:public"],
)

# ============================================================================
# Binario del Servidor RBE
# ============================================================================

rust_binary(
    name = "rbe-server",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/bin/**"],
    ),
    compile_data = [":build_script"],
    crate_root = "src/main.rs",
    edition = "2021",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    deps = [
        ":build_script",
        "@crates//:ahash",
        "@crates//:anyhow",
        "@crates//:async-stream",
        "@crates//:bytes",
        "@crates//:chrono",
        "@crates//:crossbeam",
        "@crates//:dashmap",
        "@crates//:fastrand",
        "@crates//:futures",
        "@crates//:hex",
        "@crates//:once_cell",
        "@crates//:parking_lot",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:serde",
        "@crates//:serde_bytes",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tokio-util",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:uuid",
    ],
    visibility = ["//visibility:public"],
)

# ============================================================================
# Binario del Worker RBE
# ============================================================================

rust_binary(
    name = "rbe-worker",
    srcs = glob(
        ["src/bin/**/*.rs"],
    ),
    compile_data = [":build_script"],
    crate_root = "src/bin/worker.rs",
    edition = "2021",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    deps = [
        ":build_script",
        ":rbe_lib",
        "@crates//:ahash",
        "@crates//:anyhow",
        "@crates//:bytes",
        "@crates//:chrono",
        "@crates//:crossbeam",
        "@crates//:dashmap",
        "@crates//:fastrand",
        "@crates//:futures",
        "@crates//:once_cell",
        "@crates//:parking_lot",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:serde",
        "@crates//:serde_bytes",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tokio-util",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:uuid",
    ],
    visibility = ["//visibility:public"],
)

# ============================================================================
# Alias para facilitar la compilación
# ============================================================================

alias(
    name = "server",
    actual = ":rbe-server",
    visibility = ["//visibility:public"],
)

alias(
    name = "worker",
    actual = ":rbe-worker",
    visibility = ["//visibility:public"],
)

# ============================================================================
# Tests
# ============================================================================

rust_test(
    name = "rbe_lib_test",
    crate = ":rbe_lib",
    edition = "2021",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    deps = [
        ":build_script",
        "@crates//:ahash",
        "@crates//:anyhow",
        "@crates//:async-stream",
        "@crates//:bytes",
        "@crates//:chrono",
        "@crates//:crossbeam",
        "@crates//:dashmap",
        "@crates//:fastrand",
        "@crates//:futures",
        "@crates//:hex",
        "@crates//:once_cell",
        "@crates//:parking_lot",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:serde",
        "@crates//:serde_bytes",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:tempfile",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tokio-util",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:uuid",
    ],
)

# ============================================================================
# Target para compilar todo
# ============================================================================

filegroup(
    name = "all",
    srcs = [
        ":rbe-server",
        ":rbe-worker",
    ],
    visibility = ["//visibility:public"],
)
