load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc", "rust_library", "rust_test")

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    build_script_env = {
        "PROTOC": "$(execpath @com_google_protobuf//:protoc)",
    },
    data = [
        "//proto:all_protos",
        "@com_google_protobuf//:well_known_type_protos",
    ],
    tools = [
        "@com_google_protobuf//:protoc",
    ],
    deps = [
        "@crates//:tonic-build",
    ],
)

rust_library(
    name = "rbe_lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = [
            "src/main.rs",
            "src/bin/**/*.rs",
        ],
    ),
    compile_data = [":build_script"],
    crate_name = "rbe_server",
    crate_root = "src/lib.rs",
    edition = "2021",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":build_script",
        "@crates//:ahash",
        "@crates//:anyhow",
        "@crates//:async-stream",
        "@crates//:bytes",
        "@crates//:chrono",
        "@crates//:crossbeam",
        "@crates//:dashmap",
        "@crates//:fastrand",
        "@crates//:futures",
        "@crates//:hex",
        "@crates//:once_cell",
        "@crates//:parking_lot",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:serde",
        "@crates//:serde_bytes",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tokio-util",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:uuid",
    ],
)

rust_binary(
    name = "server",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/bin/**"],
    ),
    compile_data = [":build_script"],
    crate_root = "src/main.rs",
    edition = "2021",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":build_script",
        "@crates//:ahash",
        "@crates//:anyhow",
        "@crates//:async-stream",
        "@crates//:bytes",
        "@crates//:chrono",
        "@crates//:crossbeam",
        "@crates//:dashmap",
        "@crates//:fastrand",
        "@crates//:futures",
        "@crates//:hex",
        "@crates//:once_cell",
        "@crates//:parking_lot",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:serde",
        "@crates//:serde_bytes",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tokio-util",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:uuid",
    ],
)

rust_binary(
    name = "worker",
    srcs = glob(
        ["src/bin/**/*.rs"],
    ),
    compile_data = [":build_script"],
    crate_root = "src/bin/worker.rs",
    edition = "2021",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":build_script",
        ":rbe_lib",
        "@crates//:ahash",
        "@crates//:anyhow",
        "@crates//:bytes",
        "@crates//:chrono",
        "@crates//:crossbeam",
        "@crates//:dashmap",
        "@crates//:fastrand",
        "@crates//:futures",
        "@crates//:once_cell",
        "@crates//:parking_lot",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:serde",
        "@crates//:serde_bytes",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tokio-util",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:uuid",
    ],
)

rust_binary(
    name = "cache",
    srcs = ["src/bin/cache.rs"],
    compile_data = [":build_script"],
    crate_root = "src/bin/cache.rs",
    edition = "2021",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":build_script",
        ":rbe_lib",
        "@crates//:anyhow",
        "@crates//:tokio",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)

rust_doc(
    name = "rbe_lib_doc",
    crate = ":rbe_lib",
    visibility = ["//visibility:public"],
)

rust_test(
    name = "rbe_lib_test",
    crate = ":rbe_lib",
    edition = "2021",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    deps = [
        ":build_script",
        "@crates//:ahash",
        "@crates//:anyhow",
        "@crates//:async-stream",
        "@crates//:bytes",
        "@crates//:chrono",
        "@crates//:crossbeam",
        "@crates//:dashmap",
        "@crates//:fastrand",
        "@crates//:futures",
        "@crates//:hex",
        "@crates//:once_cell",
        "@crates//:parking_lot",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:serde",
        "@crates//:serde_bytes",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:tempfile",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tokio-util",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:uuid",
    ],
)

filegroup(
    name = "all",
    srcs = [
        ":cache",
        ":server",
        ":worker",
    ],
    visibility = ["//visibility:public"],
)
