[package]
name = "rbe_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rbe-server"
path = "src/main.rs"

[[bin]]
name = "rbe-worker"
path = "src/bin/worker.rs"

[dependencies]
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
dashmap = { version = "6.1", features = ["inline"] }
async-trait = "0.1"
uuid = { version = "1.13", features = ["v4"] }
parking_lot = "0.12"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.10"
crossbeam = "0.8"
once_cell = "1.20"
ahash = "0.8"
fastrand = "2.3"
anyhow = "1.0"
chrono = "0.4"
serde_json = "1.0"
serde_bytes = "0.11"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
async-stream = "0.3"
tempfile = "3.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[build-dependencies]
tonic-build = "0.14"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
