"""FerrisRBE - Remote Build Execution server for Bazel.

Este módulo define las dependencias del proyecto FerrisRBE,
un servidor RBE de alto rendimiento implementado en Rust.
"""

module(
    name = "ferrisrbe",
    version = "0.1.0",
)

# ============================================================================
# Reglas de Rust
# ============================================================================

bazel_dep(name = "rules_rust", version = "0.59.1")

# ============================================================================
# Generación de código Protobuf y gRPC
# ============================================================================

bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")

# ============================================================================
# Construcción de imágenes OCI (contenedores)
# ============================================================================

bazel_dep(name = "rules_oci", version = "2.2.3")
bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")

# ============================================================================
# Plataformas y toolchains
# ============================================================================

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# ============================================================================
# C++ Toolchain (Zig) para compilación cruzada
# ============================================================================

bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.1")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

# Registrar toolchains de C/C++ para Linux
register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
)

# ============================================================================
# Toolchain de Rust
# ============================================================================

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")

rust.toolchain(
    edition = "2021",
    versions = ["1.85.0"],
    # Compilar para Linux AMD64 y ARM64 para las imágenes de Docker
    extra_target_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
    ],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# ============================================================================
# Crate Universe - Dependencias de crates.io
# ============================================================================

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

# Import dependencies from Cargo.toml / Cargo.lock
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)

crate.annotation(
    crate = "ring",
    build_script_env = {
        "CFLAGS_x86_64_unknown_linux_gnu": "--target=x86_64-linux-gnu -D__DATE__=\"redacted\" -D__TIMESTAMP__=\"redacted\" -D__TIME__=\"redacted\" -fno-lto -fsanitize-undefined-strip-path-components=-1",
        "CFLAGS_aarch64_unknown_linux_gnu": "--target=aarch64-linux-gnu -D__DATE__=\"redacted\" -D__TIMESTAMP__=\"redacted\" -D__TIME__=\"redacted\" -fno-lto -fsanitize-undefined-strip-path-components=-1",
    },
    rustc_flags = ["-C", "opt-level=3"],
)

crate.annotation(
    crate = "tokio",
    rustc_flags = ["-C", "opt-level=3"],
)

crate.annotation(
    crate = "prost",
    rustc_flags = ["-C", "opt-level=3"],
)

crate.annotation(
    crate = "serde",
    rustc_flags = ["-C", "opt-level=3"],
)

crate.annotation(
    crate = "reqwest",
    rustc_flags = ["-C", "opt-level=3"],
)

use_repo(crate, "crates")

# ============================================================================
# Registro de OCI para imágenes base
# ============================================================================

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Imagen base para el servidor RBE (Debian Bookworm Slim)
# Usamos tag en lugar de digest para evitar problemas de compatibilidad
oci.pull(
    name = "debian_bookworm_slim",
    image = "docker.io/library/debian",
    tag = "bookworm-slim",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)

use_repo(
    oci,
    "debian_bookworm_slim",
    "debian_bookworm_slim_linux_amd64",
    "debian_bookworm_slim_linux_arm64_v8",
)
