module(
    name = "ferrisrbe",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.59.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_oci", version = "2.2.3")
bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.1")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
    ],
    versions = ["1.85.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
crate.annotation(
    build_script_env = {
        "CFLAGS_x86_64_unknown_linux_gnu": "--target=x86_64-linux-gnu -D__DATE__=\"redacted\" -D__TIMESTAMP__=\"redacted\" -D__TIME__=\"redacted\" -fno-lto -fsanitize-undefined-strip-path-components=-1",
        "CFLAGS_aarch64_unknown_linux_gnu": "--target=aarch64-linux-gnu -D__DATE__=\"redacted\" -D__TIMESTAMP__=\"redacted\" -D__TIME__=\"redacted\" -fno-lto -fsanitize-undefined-strip-path-components=-1",
    },
    crate = "ring",
    rustc_flags = [
        "-C",
        "opt-level=3",
    ],
)
crate.annotation(
    crate = "tokio",
    rustc_flags = [
        "-C",
        "opt-level=3",
    ],
)
crate.annotation(
    crate = "prost",
    rustc_flags = [
        "-C",
        "opt-level=3",
    ],
)
crate.annotation(
    crate = "serde",
    rustc_flags = [
        "-C",
        "opt-level=3",
    ],
)
crate.annotation(
    crate = "reqwest",
    rustc_flags = [
        "-C",
        "opt-level=3",
    ],
)
use_repo(crate, "crates")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian_bookworm_slim",
    digest = "sha256:96e378d7e6531ac9a15ad505478fcc2e69f371b10f5cdf87857c4b8188404716",
    image = "docker.io/library/debian",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "debian_bookworm_slim",
    "debian_bookworm_slim_linux_amd64",
    "debian_bookworm_slim_linux_arm64_v8",
)
