load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@benchmark_pip//:requirements.bzl", "requirement")

package(default_visibility = ["//benchmark:__subpackages__"])

py_library(
    name = "benchmark_lib",
    srcs = ["benchmark_lib.py"],
    imports = [".."],
    deps = [
        "//benchmark/proto:reapi_py_proto",
        requirement("grpcio"),
        requirement("protobuf"),
    ],
)

py_binary(
    name = "execution_load_test",
    srcs = ["execution-load-test.py"],
    main = "execution-load-test.py",
    deps = [
        ":benchmark_lib",
        "//benchmark/proto:reapi_py_proto",
    ],
)

py_binary(
    name = "action_cache_test",
    srcs = ["action-cache-test.py"],
    main = "action-cache-test.py",
    deps = [
        ":benchmark_lib",
        "//benchmark/proto:reapi_py_proto",
    ],
)

py_binary(
    name = "cas_load_test",
    srcs = ["cas-load-test.py"],
    main = "cas-load-test.py",
    deps = [
        ":benchmark_lib",
        "//benchmark/proto:reapi_py_proto",
    ],
)

py_binary(
    name = "o1_streaming_test",
    srcs = ["o1-streaming-test.py"],
    main = "o1-streaming-test.py",
    deps = [
        ":benchmark_lib",
        "//benchmark/proto:reapi_py_proto",
    ],
)

py_binary(
    name = "connection_churn_test",
    srcs = ["connection-churn-test.py"],
    main = "connection-churn-test.py",
    deps = [
        ":benchmark_lib",
        "//benchmark/proto:reapi_py_proto",
    ],
)

py_binary(
    name = "cache_stampede_test",
    srcs = ["cache-stampede-test.py"],
    main = "cache-stampede-test.py",
    deps = [
        ":benchmark_lib",
        "//benchmark/proto:reapi_py_proto",
    ],
)

py_binary(
    name = "noisy_neighbor_test",
    srcs = ["noisy-neighbor-test.py"],
    main = "noisy-neighbor-test.py",
    deps = [
        ":benchmark_lib",
        "//benchmark/proto:reapi_py_proto",
    ],
)

py_binary(
    name = "check_regression",
    srcs = ["check-regression.py"],
    main = "check-regression.py",
    deps = [":benchmark_lib"],
)

filegroup(
    name = "all",
    srcs = [
        ":action_cache_test",
        ":cache_stampede_test",
        ":cas_load_test",
        ":check_regression",
        ":connection_churn_test",
        ":execution_load_test",
        ":noisy_neighbor_test",
        ":o1_streaming_test",
    ],
)
